--- a/style.css
+++ b/style.css
@@ -6,13 +6,16 @@
 body {
     font-family: "KiwiMaru", sans-serif;
     margin: 0;
-    padding: 0;
 }
 
 img {
     max-width: 100%;
     max-height: 300px;
     height: auto;
+}
+
+main {
+    padding: 10px 20px 0;
 }
 
 .banner {
@@ -22,6 +25,7 @@ img {
     padding: 20px;
 }
 
+
 .intro {
     max-width: 800px;
     margin: 20px auto;
@@ -29,27 +33,42 @@ img {
     text-align: center;
 }
 
-.links ul {
+.links {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    /* background-color: #ffffff; */
+}
+
+.links li {
     list-style: none;
-    padding: 20px;
+    overflow: hidden;
+    width: 300px;
+    border: 1px solid #f0f0f0;
+    border-radius: 10px;
 }
 
-.links ul a {
-    color: #5555ee;
+.links li .thumbnail {
+    border-bottom: 1px solid #d1d1d1;
 }
 
-.links ul a:hover {
-    color: #0000ff;
+.links li .thumbnail:hover {
+    opacity: 0.8;
 }
 
-.box {
-    padding: 40px 10px;
-    margin: 10px 10px;
+.links li .content {
+    padding: 40px 20px;
+}
+
+.links li .content a {
     font-weight: bold;
-    color: #98e5d8;
-    background: #f5f5f5;
-    border: solid 2px #a2a2a2;
-    border-radius: 10px;/*角の丸み*/
+    color: #55d2ee;
+    text-decoration: none;
+    text-align: center;
+}
+
+.links li .content a:hover {
+    color: #4558c7;
 }
 
 .menu-list {
@@ -65,20 +84,24 @@ img {
 }
 
 .menu-list ul {
+    position: fixed;
     list-style: none;
-    padding: 20px;
+    top: 100px;
 }
 
-.menu-list ul a {
+.menu-list ul li a {
+    font-size: 20px;
+    text-decoration-line: underline;
     color: #000;
 }
 
-.menu-list ul a:hover {
+.menu-list ul li a:hover {
     color: #d1d1d1;
 }
 
-.menu-list ul p {
+.menu-list p {
     position: fixed;
+    padding: 0 10px;
     bottom: 0;
 }
 
@@ -135,4 +158,10 @@ img {
 #menu-button-check:checked ~ .menu-list {
     left: 0;
     transition: all 0.3s ease;
+}
+
+#footer {
+    text-align: center;
+    background: #d1d1d1;
+    padding: 40px 40px;
 }
