fix: disabled tap highlight, header-logo collision box

--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ body {
     overflow-x: hidden;
 }
 
+a {
+    -webkit-tap-highlight-color: transparent;
+}
+
 .header {
     position: fixed;
     top: 0;
@@ -29,22 +33,28 @@ body {
     z-index: 12;
 }
 
-.header .header-logo {
+.header-logo {
     position: relative;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     width: 6rem;
     height: 6rem;
+    margin: 0.5rem;
     padding: 1rem;
-    left: 0.5rem;
-    top: 0.5rem;
-    cursor: pointer;
     background: #e4fff091;
     border-radius: 50%;
-    text-decoration: none;
     z-index: 1;
+    text-decoration: none;
 }
+
+.header-logo img {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 50%;
+}
+
 
 .header .frame {
     position: fixed;
@@ -627,21 +637,18 @@ body {
 @media (min-width: 1280px) {
     .about-profile {
         width: 900px;
-        justify-content: space-around;
     }
 }
 
 @media (min-width: 1025px) and (max-width: 1279px) {
     .about-profile {
         width: 650px;
-        justify-content: space-around;
     }
 }
 
 @media (max-width: 1024px) {
     .about-profile {
         width: 100%;
-        justify-content: space-between;
     }
 }
 
