--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ label {
     opacity: 0;
     transform: scale(0);
     transition: opacity 0.4s, transform 0.4s;
-    stroke: var(--menu-button-color); 
+    stroke: var(--menu-button-color);
     stroke-width: 5;
     stroke-linecap: round;
 }
@@ -697,7 +697,7 @@ label {
 .about-description {
     position: relative;
     align-self: flex-start;
-        width: 280px;
+    width: 280px;
     text-align: center;
     font-size: 1.9rem;
     color: #363636dc;
@@ -750,17 +750,87 @@ label {
     }
 }
 
-.hobby {
-    display: flex;
-    flex-direction: column;
-}
-
 .skills {
     display: flex;
     flex-direction: column;
 }
 
+.skills-container {
+    display: flex;
+    flex-direction: column;
+    margin: 0 4rem;
+    mask-image: linear-gradient(90deg, transparent 0%, #ffffff 4rem, #ffffff calc(100% - 4rem), transparent 100%);
+    gap: 2rem;
+}
+
+.skills-row {
+    position: relative;
+    overflow: visible;
+    width: calc(100% + 6.5rem);
+}
+
+.skills-row:first-child {
+    margin-top: 3rem;
+}
+
+.skills-row:last-child {
+    margin-bottom: 3rem;
+}
+
+.skills-row:nth-child(2n) {
+    transform: translateX(-6.5rem);
+}
+
 .skill-item {
+    position: relative;
+    aspect-ratio: 1 / 1;
+    border-radius: 2rem;
+    margin-right: 2rem;
+    padding: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #eee;
+    box-shadow: 0 0 1rem rgba(3, 7, 18, 0.1);
+    background: #fff;
+    user-select: none;
+}
+
+.skill-item[href] {
+    cursor: pointer;
+}
+
+.skill-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.skill-item::before {
+    content: "";
+    position: absolute;
+    inset: 10%;
+    background: var(--glow-color);
+    filter: blur(4rem);
+    z-index: -1;
+    opacity: 0;
+    transition: opacity 2s ease;
+    will-change: opacity;
+}
+
+.skill-item:hover::before {
+    opacity: 1;
+    transition: opacity 0.2s ease;
+}
+
+@media (max-width: 1024px) {
+    .skills-container {
+        gap: 1rem;
+    }
+
+    .skill-item {
+        margin-right: 1rem;
+    }
 }
 
 .experience {
